--- a/Website/src/app/app.component.html
+++ b/Website/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
+  <app-player></app-player>
   <app-categories></app-categories>
   <app-playlist></app-playlist>
   <app-history></app-history>
