--- a/Website/src/styles.scss
+++ b/Website/src/styles.scss
@@ -1,12 +1,13 @@
 @import "./assets/css/colors";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-/* You can add global styles to this file, and also import other style files */
-html {
+body {
+    font-family: Roboto, 'Open Sans', Arial, sans-serif;
     background-color: $background-color;
     color: $text-color;
+    margin: 0;
 }
 
 * {
-    font-family: 'Open Sans';
     box-sizing: border-box;
 }
