--- a/Website/src/app/history/history.component.html
+++ b/Website/src/app/history/history.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let sample of lastSamples">
+  <li *ngFor="let sample of getSamples()">
     <div (click)="onPlay(sample)">{{formatDate(sample.getTimestamp())}}: {{sample.getTitle()}} ({{sample.getPlayCount()}})</div>
   </li>
 </ul>
