--- a/Website/src/app/playlist/playlist.component.html
+++ b/Website/src/app/playlist/playlist.component.html
@@ -1,5 +1,8 @@
-<ul>
-  <li *ngFor="let sample of getSamples()">
-    <div>{{sample.getCategory().getTitle()}}{{sample.getTitle()}}</div>
-  </li>
-</ul>
+<div>
+  <button (click)="onClear()">Clear</button>
+  <ul>
+    <li *ngFor="let sample of getSamples()">
+      <div>{{sample.getCategory().getTitle()}}{{sample.getTitle()}}</div>
+    </li>
+  </ul>
+</div>
