--- a/Website/src/app/app.component.html
+++ b/Website/src/app/app.component.html
@@ -1,9 +1,14 @@
 <div>
-  <app-registration></app-registration>
-  <app-player></app-player>
+  <app-header>
+    <app-logo></app-logo>
+    <app-player></app-player>
+    <app-registration></app-registration>
+  </app-header>
+  <app-sidebar>
+    <app-playlist></app-playlist>
+    <app-history></app-history>
+  </app-sidebar>
   <app-categories></app-categories>
-  <app-playlist></app-playlist>
-  <app-history></app-history>
 </div>
 
 <router-outlet></router-outlet>
