--- a/Website/src/app/components/categories/categories.component.scss
+++ b/Website/src/app/components/categories/categories.component.scss
@@ -1,7 +1,5 @@
 ul {
-    display: flex;
-    flex-direction: column;
-
+    display: block;
     list-style-type: none;
     margin: 0;
     padding: 0;
