--- a/Website/src/assets/css/_colors.scss
+++ b/Website/src/assets/css/_colors.scss
@@ -1,1 +1,4 @@
-$primary-color: #4040FF;
+$background-color: #202020;
+$light-background-color: #404040;
+$text-color: #808080;
+$mobile-width: 750px;
