--- a/Website/src/app/components/category/category.component.scss
+++ b/Website/src/app/components/category/category.component.scss
@@ -1,21 +1,34 @@
 @import '../../../assets/css/colors';
 
-div {
-    .category-title {
-        font-size: 20px;
-    }
+.category-title {
+    font-size: 20px;
+}
 
+ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+}
+
+li {
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+@media only screen and (max-width: $mobile-width) {
     ul {
-        display: flex;
-        flex-direction: row;
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        flex-wrap: wrap;
+        display: block;
+        width: 100%;
     }
 
-    li.sample {
-        margin-right: 20px;
-        margin-bottom: 10px;
+    li {
+        display: block;
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 5px;
     }
 }
+
