--- a/Website/src/app/components/history/history.component.html
+++ b/Website/src/app/components/history/history.component.html
@@ -1,5 +1,11 @@
+<h1>History</h1>
 <ul>
   <li *ngFor="let sample of getSamples()">
-    <div (click)="onPlay(sample)">{{formatDate(sample.getTimestamp())}}: {{sample.getTitle()}} ({{sample.getPlayCount()}})</div>
+    <div class="nowrap" (click)="onPlay(sample)">
+      <span class="timestamp">{{formatDate(sample.getTimestamp())}}</span>
+      <span class="category">{{sample.getCategoryTitle()}}</span>
+      <span class="sampleTitle">{{sample.getTitle()}}</span>
+      <span class="playCount">{{sample.getPlayCount()}}</span>
+    </div>
   </li>
 </ul>
