--- a/Website/src/app/components/logo/logo.component.scss
+++ b/Website/src/app/components/logo/logo.component.scss
@@ -1,1 +1,10 @@
 @import '../../../assets/css/colors';
+
+:host {
+    width: auto;
+    height: 100%;
+
+    svg {
+        height: 100%;
+    }
+}
