--- a/Website/src/app/components/player/player.component.html
+++ b/Website/src/app/components/player/player.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="isPlaying()">
-    <div class="header">now playing</div>
+<div class="container" *ngIf="isPlaying()">
+    <div class="playing">now playing</div>
     <div class="category nowrap">{{getCategoryTitle()}}</div>
     <div class="title nowrap">{{getSampleTitle()}}</div>
 </div>
