--- a/Website/src/app/components/player/player.component.scss
+++ b/Website/src/app/components/player/player.component.scss
@@ -3,7 +3,7 @@
     overflow: hidden;
 }
 
-.header {
+.playing {
     font-size: 75%;
 }
 
@@ -12,5 +12,5 @@
 }
 
 .title {
-    font-size: 125%;
+    font-size: 120%;
 }
