--- a/Website/src/assets/css/_colors.scss
+++ b/Website/src/assets/css/_colors.scss
@@ -1,4 +1,6 @@
 $background-color: #202020;
 $light-background-color: #404040;
+$light-text-color: #C0C0C0;
 $text-color: #808080;
+$dark-text-color: #555555;
 $mobile-width: 750px;
