--- a/Website/src/app/app.component.html
+++ b/Website/src/app/app.component.html
@@ -1,14 +1,15 @@
 <div>
-  <app-header>
+  <div class="header">
     <app-logo></app-logo>
     <app-player></app-player>
     <app-registration></app-registration>
-  </app-header>
-  <app-sidebar>
+    <app-filter #filterComponent (filterChanged)="onFilterChanged($event)"></app-filter>
+  </div>
+  <div class="sidebar">
     <app-playlist></app-playlist>
     <app-history></app-history>
-  </app-sidebar>
-  <app-categories></app-categories>
+  </div>
+  <app-categories [filter]="filter"></app-categories>
 </div>
 
 <router-outlet></router-outlet>
