--- a/Website/src/app/components/playlist/playlist.component.html
+++ b/Website/src/app/components/playlist/playlist.component.html
@@ -1,6 +1,8 @@
 <div>
   <h1>Playlist ({{getSamples().length}})
-      <button (click)="onClear()">clear</button>
+    <div class="toolbar">
+        <button class="flat" (click)="onClear()">clear</button>
+    </div>
   </h1>
   <ul>
     <li *ngFor="let sample of getSamples()">
