Another bunch of fixes.

--- a/Website/src/app/components/categories/categories.component.html
+++ b/Website/src/app/components/categories/categories.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <ul class="category-container">
-    <li *ngFor="let category of getCatagories()">
+    <li *ngFor="let category of categories">
       <app-category [category]="category" [filter]="filter">
       </app-category>
     </li>
