--- a/Website/src/app/components/registration/registration.component.html
+++ b/Website/src/app/components/registration/registration.component.html
@@ -2,7 +2,7 @@
 <div>
     <div class="active">
         <select [(value)]="activeRegistrationId" (change)="onChangeActiveRegistration($event)" accesskey="p">
-            <option *ngFor="let registration of getRegistrations()" value="{{registration.id}}">{{registration.description}}</option>
+            <option *ngFor="let registration of registrations" value="{{registration.id}}">{{registration.description}}</option>
         </select>
     </div>
     <div class="description">
