--- a/Website/src/app/app.component.html
+++ b/Website/src/app/app.component.html
@@ -2,8 +2,7 @@
   <div class="header">
     <app-logo></app-logo>
     <app-player></app-player>
-    <app-registration></app-registration>
-    <app-filter #filterComponent (filterChanged)="onFilterChanged($event)"></app-filter>
+    <app-toolbox #toolBoxComponent (filterChanged)="onFilterChanged($event)"></app-toolbox>
   </div>
   <div class="sidebar">
     <app-playlist></app-playlist>
