--- a/Website/src/styles.scss
+++ b/Website/src/styles.scss
@@ -1,7 +1,7 @@
 @import "./assets/css/colors";
 
 $header-height: 75px;
-$mobile-header-height: 68px;
+$mobile-header-height: 60px;
 $mobile-filter-height: 44px;
 $sidebar-width: 400px;
 
@@ -21,12 +21,37 @@ body {
     }
 }
 
-
 .header {
     app-logo {
         display: block;
         fill: $text-color;
     }
+
+    app-toolbox {
+        .container {
+            display: table;
+            margin-top: auto;
+        
+            .row {
+                display: table-row;
+            }
+        
+            .column {
+                display: table-cell;
+            }        
+        
+            label {
+                width: 1%; /*a small value*/
+                white-space: nowrap;            
+                padding-right: 10px;
+                text-align: right;
+            }
+        
+            input, select {
+                width: 100%;
+            }
+        }
+            }
 }
 
 .sidebar {
@@ -68,13 +93,8 @@ app-categories {
 
     app-sample {
         button {
-            display: flex;
-            flex-direction: column;
-            width: 160px;
-            height: 120px;
             border: 1px solid $light-background-color;
             overflow: hidden;
-            justify-content: space-between;
             align-items: stretch;
             text-align: center;
             padding: 0;
@@ -119,6 +139,7 @@ h1 {
 button.flat {
     color: $text-color;
     border: 0;
+    padding: 0;
     background: none;
     box-shadow: none;
     border-radius: 0px;        
@@ -158,53 +179,67 @@ select {
         left: 0;
         right: 0;
         top: 0;
-        height: $header-height;
         background-color: $light-background-color;
         border-bottom: 1px solid $text-color;
         display: grid;
         grid-template-columns: auto 1fr $sidebar-width;
-        grid-template-rows: auto auto;
-        
+        grid-template-rows: auto;
+
+        > * {
+            padding: 10px;
+            grid-row-start: 1;
+        }
+
         app-logo {
             grid-column-start: 1;
             grid-column-end: 2;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            padding: 10px;
+            align-self: center;
 
             svg {
                 // TODO: Make sure this auto-aligns properly
-                height: 54px;
+                height: 50px;
             }
         }
     
         app-player {
             grid-column-start: 3;
             grid-column-end: 4;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            padding: 10px;
             display: block;
             height: 100%;
             width: $sidebar-width;
             border-left: 1px solid $text-color;
         }
 
-        app-registration, app-filter {
-            display: block;
-            justify-self: end;
+        app-toolbox {
+            padding-top: 0;
+            padding-bottom: 0;
             grid-column-start: 2;
-        }
-    
-        app-registration {
-            grid-row-start: 1;
-            .active, .description {
-                display: inline-block;
+            justify-self: end;
+            display: flex;
+            flex-direction: row-reverse;
+
+            .buttons {
+                float: right;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+                margin-left: 10px;
+
+                button {
+                    display: block;
+                }
             }
         }
-    
-        app-filter {
-            grid-row-start: 2;
+    }
+
+    app-categories {
+        button {
+            display: flex;
+            flex-direction: column;
+            width: 160px;
+            height: 120px;
+            justify-content: space-between;
         }
     }
 }
@@ -218,7 +253,7 @@ select {
         background: $background-color;
         border-bottom: 1px solid $text-color;
         display: grid;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto auto;
         grid-template-columns: 1fr;
 
         app-logo {
@@ -233,6 +268,20 @@ select {
                 height: 35px;
             }
         }
+
+        app-toolbox {
+            padding-bottom: 10px;
+
+            .buttons {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                
+                > *:not(first-child) {
+                    margin-left: 10px;
+                }
+            }
+        }
     
         app-player {
             .container {
@@ -243,18 +292,16 @@ select {
             z-index: 100;
         }
 
-        app-registration, app-filter {
+        app-toolbox {
+            grid-row-start: 2;
+            grid-column-start: 1;
             padding-left: 10px;
             padding-right: 10px;
-        }
-    
-        app-registration {
-            grid-row-start: 2;
-        }
-    
-        app-filter {
-            grid-row-start: 3;
             border-bottom: 1px solid $text-color;
+
+            .container {
+                padding-top: 10px;
+            }
         }
     }
 
@@ -287,16 +334,18 @@ select {
         app-sample {           
             button {
                 width: 100%;
-                height: 50px;
+                height: 65px;
             }
 
             .title {
-                padding: 2px;
+                font-size: 16px;
+                padding: 2px 5px;
             }
 
             .info {
-                font-size: 80%;
-                color: $dark-text-color;
+                display: none;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
     }
